--- a/css/style1.css
+++ b/css/style1.css
@@ -1,13 +1,68 @@
 h1{
-    color:mediumvioletred;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    color:greenyellow;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+}
+
+img{
+    width: 100%;
+}
+
+iframe{
+    width: 100%;
 }
 
 h2{
-    color:mediumvioletred;
+    color:salmon;
+    font-size:20px;
+    
 }
 
 .highlight{
     background-color: yellow;
-    color: blue;
+    color: navy;
+    font-size: 25px;
+    background-color: greenyellow;
+}
+
+body{
+    background-color: greenyellow;
+}
+
+#rude-red{
+    background-color: red;
+
+}
+
+.container{
+   max-width: 900px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+#navigation{
+    background-color: coral;
+    
+    
+}
+
+#header{
+    background-color: navy;
+    padding:50px;
+    border:5px solid navajowhite;
+    margin:50px;
+
+}
+
+#content{
+    background-color: papayawhip;
+    margin:40px;
+    padding:8px;
+    border:40px;
+
+}
+
+#footer{
+    background-color: honeydew;
+    border: 40px;
+    margin:40px;
 }
