--- a/css/style1.css
+++ b/css/style1.css
@@ -4,6 +4,9 @@ h1{
 }
 
 img{
+   display: block;
+   margin: 0 auto;
+   max-width: 500px;;
     width: 100%;
 }
 
@@ -31,11 +34,6 @@ body{
     background-color: greenyellow;
 }
 
-#rude-red{
-    background-color: red;
-
-}
-
 .container{
    max-width: 900px;
     width: 100%;
@@ -58,20 +56,17 @@ body{
     background-color: navy;
     padding:50px;
     border:5px solid navajowhite;
-    margin:50px;
+    
 
 }
 
 #content{
     background-color: papayawhip;
-    margin:40px;
     padding:8px;
-    border:40px;
-
 }
 
 #footer{
     background-color: honeydew;
-    border: 40px;
-    margin:40px;
+    border: 40px solid wheat;
+    padding: 10px;
 }
