--- a/css/style1.css
+++ b/css/style1.css
@@ -48,6 +48,10 @@ body{
     right: 0;
  }
 
+ #navigation .container > ul >li {
+     display: inline;
+ }
+
 #navigation li:first-child {
     background-color: maroon;
 }
@@ -56,17 +60,27 @@ body{
     background-color: indianred;
 }
 
-li:first-child :hover{
+li:first-child :hover {
     background-color: cyan;
 }
 
+#navigation li {
+    position: relative;
+}
 
-#navigation ul ul   {
+#navigation ul ul  {
     display: none;
+    position: absolute;
+    right: 0;
 }
 
 #navigation:hover {
     background-color: royalblue;
+}
+
+#navigation a:hover + ul, 
+#navigation a + ul:hover {
+    display: block;
 }
 
 #header{
